...
        tabBarLabelPosition: 'below-icon',
      })}>
      <Tab.Screen
        name="Home"
        component={Home}
        options={{
          tabBarButtonTestID: 'home-tab',
        }}
      />
      <Tab.Screen
        name="Tracking"
        component={TrackingScreen}
        options={{
...
        }}
      />
      <Tab.Screen
        name="Profile"
        component={AuthScreen}
        options={{
          tabBarButtonTestID: 'profile-tab',
        }}
      />
    </Tab.Navigator>
  );
};

...
