...
        <AppTextInput name="password" label="Password" secureTextEntry={true} />
      </AppForm>
      <Authentication
        onAuthSuccess={handleAuthSuccess}
        onAuthFail={handleAuthFail}
      />
      <Button testID="submit" title="Submit" onPress={handleSubmit(onSubmit)} />
    </View>
  );
};

export default LoginScreen;

